<resources>
    <string name="app_name">Photoshooto</string>
    <string name="sign_in_text">Let’s Sign You In</string>
    <string name="sign_in_dialogue">Welcome back, you’ve been missed!</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="term_condition">By creating an account, you agree to our
Term &amp; Conditions</string>
    <string name="account_sign_up_dialogue">Don\'t have an account? Sign up</string>
    <string name="account_sign_in_dialogue">Don\'t have an account? Sign in</string>
    <string name="google_login">Connect with Google</string>
    <string name="true_caller_login">Connect with truecaller</string>
    <string name="sign_up_text">Getting Started</string>
    <string name="sign_up_dialogue">Create an account to continue!</string>
    <string name="main_pic_text">"Pic of the Day "</string>
    <string name="viral_message">Your photos are becoming viral soon...!!!</string>
    <string name="ten_pic_text">" Top 10 Photos of the Day"</string>
    <string name="title_activity_bottom_navigation">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_cameras_sale">Cameras on Sale</string>
    <string name="title_about_us">About Us</string>
    <string name="title_contact_us">Contact Us</string>
    <string name="title_top_10_phot">Top 10 photos of the day</string>
    <string name="title_profile">Profile</string>



</resources>