<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.LoginActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="-31dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="40dp">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/app_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    app:title="Sign In"
                    app:titleTextColor="@color/white" />
            </com.google.android.material.appbar.AppBarLayout>


            <TextView
                android:id="@+id/sign_in_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:text="@string/sign_in_text"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.589"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/app_bar" />

            <TextView
                android:id="@+id/sign_in_dialogue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/sign_in_dialogue"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.566"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sign_in_text" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlined_user_id"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sign_in_dialogue"
                app:startIconDrawable="@drawable/ic_profile">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_id"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:hint="Username or Email" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlined_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:padding="10dp"
                app:endIconMode="password_toggle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/outlined_user_id"
                app:startIconDrawable="@drawable/ic_lock">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:hint=" Password"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:text="@string/forgot_password"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/outlined_password" />

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/ic_base"
                android:onClick="loginButton"
                android:text="Sign In"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/forgot_password" />

            <TextView
                android:id="@+id/register_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_sign_up_dialogue"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_button"
                app:layout_constraintVertical_bias="0.06" />

            <LinearLayout
                android:id="@+id/google_login_layout"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_marginStart="9dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="9dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/register_text">

                <TextView
                    android:layout_width="90dp"
                    android:layout_height="36dp"
                    android:layout_gravity="center|left"
                    android:textColor="@color/black" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity=""
                    android:layout_marginEnd="30dp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_google" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="48dp"
                    android:layout_height="55dp"
                    android:layout_gravity=""
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:src="@drawable/caller_icon" />

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="50dp"
                    android:layout_height="56dp"
                    android:layout_marginStart="9dp"
                    android:layout_marginEnd="9dp"
                    android:gravity="right"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:layout_editor_absoluteY="627dp">

                    <TextView
                        android:id="@+id/true_caller_login"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="right"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                </LinearLayout>


            </LinearLayout>
            <TextView
                android:id="@+id/texttv"
                android:layout_width="311dp"
                android:layout_height="58dp"
                android:layout_gravity="center"
                android:text="Connect with Google and Truecaller "
                android:textColor="@color/black"
                android:textSize="18dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="@+id/app_bar"
                tools:layout_editor_absoluteY="631dp"
                tools:ignore="MissingConstraints" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>